# DynamicNeuralNetPlayground

./: .gitignore  CMakeLists.txt  README.md  main.prof  main.py  main.py.lprof  pyproject.toml  test_agraph.py  train.py
ext/: agraph.cpp
lib/: dnn.py
old/: old_main_1.py  old_main_2.py
