[build-system]
# Currently an incomplete list of dependencies
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "dynamic-neural-network"
version = "0.0.1"
description = "An experiment with dynamic neural network architectures"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Harry Zhou", email = "hyzhou42@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/hhhzzzsss/DynamicNeuralNetPlayground"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.scikit-build.editable]
rebuild = true

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1